Minor refactor to remove warnings.